@@ -1,3 +1,9 @@
+2013-08-11  Christian Heimes  <christian@python.org>
+
+	* OpenSSL/crypto/x509ext.c: Fix handling of NULL bytes inside
+	  subjectAltName general names, CVE-2013-4073.
+	* OpenSSL/crypto/x509.c: Fix memory leak in get_extension().
+
 2011-08-14  Jean-Paul Calderone  <exarkun@twistedmatrix.com>
 
 	* Release 0.13
